# pdfTools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: photo_to_pdf_design.md
scripts/: README.md  pdftools_mac.spec  run_gui.sh
src/pdftools/: __init__.py
src/pdftools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdftools/core/: __init__.py  operations.py  ranges.py
src/pdftools/gui/: __init__.py  main.py  main_window.py  panels.py
src/pdftools/server/: __init__.py  app.py
src/pdftools/services/: __init__.py  tasks.py
tests/core/: test_operations.py  test_ranges.py
